--- a/style.css
+++ b/style.css
@@ -1,4 +1,213 @@
 body {
-	background: #000;
+	background: skyblue;
 	color: #fff;
 }
+
+/* Balloon */
+.balloons {
+	 z-index:10;
+	 position:fixed;
+	 left: 25%;
+	 top: 12%;
+}
+.time1 {
+	display: block;
+	font-size: 18px;
+	padding: 9px;
+	font-weight: 300;
+	color: #fff; 
+	font-family: 'Podkova', cursive;
+}
+.balloon {
+	display: inline-block;
+	width: 50px;
+	height: 60px;
+	background: hsl(215, 50%, 65%);
+	background: rgba(102, 145, 204,1);
+	color: #f7fcfd;
+	border-radius: 80%;
+	text-align: center;
+	font-size: 30px ;
+	position: relative;
+	box-shadow: inset -10px -10px 0 rgba(0, 0, 0, 0.07);  
+	margin: 10px 1px;
+	transition: transform 0.5s ease;
+	z-index: 2;
+	animation: balloons 4s ease-in-out infinite;
+	transform-origin: bottom center;
+	line-height: 60px;
+}
+
+@keyframes balloons {
+  0%,
+  100% {
+    transform: translateY(0) rotate(-4deg);
+  }
+  50% {
+    transform: translateY(-25px) rotate(4deg);
+  }
+}
+
+.balloon:after { 
+  content: ""; 
+  display: inline-block;
+  top: 60px;
+  position: absolute;
+  height: 37px;
+  width: 2px;
+  margin: 0 auto;
+  left: 26px;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.balloon:nth-child(1) {
+  box-shadow: inset -10px -10px 0 rgba(88, 125, 176,1);
+}
+.balloon:nth-child(2) {
+  background: hsl(245, 40%, 65%);
+  animation-duration: 3.5s;
+}
+
+.balloon:nth-child(2):before {
+  color: hsl(245, 40%, 65%);
+}
+
+.balloon:nth-child(3) {
+  background: hsl(139, 50%, 60%);
+  animation-duration: 3s;
+}
+
+.balloon:nth-child(3):before {
+  color: hsl(139, 30%, 50%);
+}
+
+.balloon:nth-child(4) {
+  background: hsl(59, 50%, 58%);
+  animation-duration: 4.5s;
+}
+
+.balloon:nth-child(4):before {
+  color: hsl(59, 30%, 52%);
+}
+
+.balloon:nth-child(5) {
+  background: hsl(23, 55%, 57%);
+  animation-duration: 5s;
+}
+
+.balloon:nth-child(5):before {
+  color: hsl(23, 44%, 46%);
+}
+
+
+
+h1 {
+  position: absolute;
+  top: 7%;
+  left: 50%;
+  z-index: 11;
+  font-weight:900;
+  margin: 0;
+  font-size: 17px;
+  white-space: nowrap;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+@media (min-width: 37.5em) {
+  h1 {
+    font-size: 28px;
+  }
+}
+h1 span {
+  display: inline-block;
+  margin: 0 4px;
+  -webkit-animation: 2s ease-in-out infinite move;
+          animation: 2s ease-in-out infinite move;
+}
+h1 span:nth-child(1) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+h1 span:nth-child(2) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+h1 span:nth-child(3) {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+h1 span:nth-child(4) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+h1 span:nth-child(5) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+h1 span:nth-child(6) {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+h1 span:nth-child(7) {
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+h1 span:nth-child(8) {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+}
+h1 span:nth-child(9) {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+h1 span:nth-child(10) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+h1 span:nth-child(11) {
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+h1 span:nth-child(12) {
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+h1 span:nth-child(13) {
+  -webkit-animation-delay: 1.3s;
+          animation-delay: 1.3s;
+}
+h1 span:nth-child(14) {
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+
+
+h1 span:nth-child(15) {
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+h1 span:nth-child(16) {
+  -webkit-animation-delay: 1.6s;
+          animation-delay: 1.6s;
+}
+
+@-webkit-keyframes move {
+  50% {
+    -webkit-transform: translate(0, -20px);
+            transform: translate(0, -20px);
+  }
+}
+
+@keyframes move {
+  50% {
+    -webkit-transform: translate(0, -20px);
+            transform: translate(0, -20px);
+  }
+}
+    
+
+
+
+
+
