--- a/style.css
+++ b/style.css
@@ -2,105 +2,21 @@ body {
 	background: skyblue;
 	color: #fff;
 }
+/* img fullscreen */
+.fullscreen-bg
+	{ position: fixed; top: 0; right: 0; bottom: 0; left: 0; overflow: hidden; z-index: -100; } 
 
-/* Balloon */
-.balloons {
-	 z-index:10;
-	 position:fixed;
-	 left: 25%;
-	 top: 12%;
-}
-.time1 {
-	display: block;
-	font-size: 18px;
-	padding: 9px;
-	font-weight: 300;
-	color: #fff; 
-	font-family: 'Podkova', cursive;
-}
-.balloon {
-	display: inline-block;
-	width: 50px;
-	height: 60px;
-	background: hsl(215, 50%, 65%);
-	background: rgba(102, 145, 204,1);
-	color: #f7fcfd;
-	border-radius: 80%;
-	text-align: center;
-	font-size: 30px ;
-	position: relative;
-	box-shadow: inset -10px -10px 0 rgba(0, 0, 0, 0.07);  
-	margin: 10px 1px;
-	transition: transform 0.5s ease;
-	z-index: 2;
-	animation: balloons 4s ease-in-out infinite;
-	transform-origin: bottom center;
-	line-height: 60px;
+.fullscreen-bg::before{
+	position: absolute; content: "";
+	background: rgba(0, 0, 0, 0.17);
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 1; 
 }
 
-@keyframes balloons {
-  0%,
-  100% {
-    transform: translateY(0) rotate(-4deg);
-  }
-  50% {
-    transform: translateY(-25px) rotate(4deg);
-  }
-}
-
-.balloon:after { 
-  content: ""; 
-  display: inline-block;
-  top: 60px;
-  position: absolute;
-  height: 37px;
-  width: 2px;
-  margin: 0 auto;
-  left: 26px;
-  background: rgba(0, 0, 0, 0.1);
-}
-
-.balloon:nth-child(1) {
-  box-shadow: inset -10px -10px 0 rgba(88, 125, 176,1);
-}
-.balloon:nth-child(2) {
-  background: hsl(245, 40%, 65%);
-  animation-duration: 3.5s;
-}
-
-.balloon:nth-child(2):before {
-  color: hsl(245, 40%, 65%);
-}
-
-.balloon:nth-child(3) {
-  background: hsl(139, 50%, 60%);
-  animation-duration: 3s;
-}
-
-.balloon:nth-child(3):before {
-  color: hsl(139, 30%, 50%);
-}
-
-.balloon:nth-child(4) {
-  background: hsl(59, 50%, 58%);
-  animation-duration: 4.5s;
-}
-
-.balloon:nth-child(4):before {
-  color: hsl(59, 30%, 52%);
-}
-
-.balloon:nth-child(5) {
-  background: hsl(23, 55%, 57%);
-  animation-duration: 5s;
-}
-
-.balloon:nth-child(5):before {
-  color: hsl(23, 44%, 46%);
-}
-
-
-
+/* Title */
 h1 {
   position: absolute;
   top: 7%;
@@ -205,6 +121,104 @@ h1 span:nth-child(16) {
             transform: translate(0, -20px);
   }
 }
+/* Balloon */
+.balloons {
+	 z-index:10;
+	 position:fixed;
+	 left: 25%;
+	 top: 12%;
+}
+.time1 {
+	display: block;
+	font-size: 18px;
+	padding: 9px;
+	font-weight: 300;
+	color: #fff; 
+	font-family: 'Podkova', cursive;
+}
+.balloon {
+	display: inline-block;
+	width: 50px;
+	height: 60px;
+	background: hsl(215, 50%, 65%);
+	background: rgba(102, 145, 204,1);
+	color: #f7fcfd;
+	border-radius: 80%;
+	text-align: center;
+	font-size: 30px ;
+	position: relative;
+	box-shadow: inset -10px -10px 0 rgba(0, 0, 0, 0.07);  
+	margin: 10px 1px;
+	transition: transform 0.5s ease;
+	z-index: 2;
+	animation: balloons 4s ease-in-out infinite;
+	transform-origin: bottom center;
+	line-height: 60px;
+}
+
+@keyframes balloons {
+  0%,
+  100% {
+    transform: translateY(0) rotate(-4deg);
+  }
+  50% {
+    transform: translateY(-25px) rotate(4deg);
+  }
+}
+
+.balloon:after { 
+  content: ""; 
+  display: inline-block;
+  top: 60px;
+  position: absolute;
+  height: 37px;
+  width: 2px;
+  margin: 0 auto;
+  left: 26px;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.balloon:nth-child(1) {
+  box-shadow: inset -10px -10px 0 rgba(88, 125, 176,1);
+}
+.balloon:nth-child(2) {
+  background: hsl(245, 40%, 65%);
+  animation-duration: 3.5s;
+}
+
+.balloon:nth-child(2):before {
+  color: hsl(245, 40%, 65%);
+}
+
+.balloon:nth-child(3) {
+  background: hsl(139, 50%, 60%);
+  animation-duration: 3s;
+}
+
+.balloon:nth-child(3):before {
+  color: hsl(139, 30%, 50%);
+}
+
+.balloon:nth-child(4) {
+  background: hsl(59, 50%, 58%);
+  animation-duration: 4.5s;
+}
+
+.balloon:nth-child(4):before {
+  color: hsl(59, 30%, 52%);
+}
+
+.balloon:nth-child(5) {
+  background: hsl(23, 55%, 57%);
+  animation-duration: 5s;
+}
+
+.balloon:nth-child(5):before {
+  color: hsl(23, 44%, 46%);
+}
+
+
+
     
 
 
