--- a/style.css
+++ b/style.css
@@ -127,9 +127,11 @@ h1 span:nth-child(16) {
 /* Balloon */
 .balloons {
 	 z-index:10;
-	 position:fixed;
-	 left: 25%;
-	 top: 12%;
+	 position: absolute;
+	 left: 50%;
+	 top: 22%;
+	 -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 .time1 {
 	display: block;
