--- a/style.css
+++ b/style.css
@@ -231,13 +231,17 @@ h1 span:nth-child(16) {
   color: hsl(23, 44%, 46%);
 }
 
-
+body {
+	width: 100%;
+	height: 100%;
+}
 div.bo {
 	/*       top   right  bottom left*/
 	padding: 10px  10px   10px   10px; /*Khoang cach tu noi dung den bo*/
 	/*Khoang cach tu bo den trang*/
 	margin-top: 30%;
-	
+	margin-left: 8%;
+	margin-right: 10%;
  	border: 2px solid green;
  	border-radius: 5px;
  	z-index: 5;
@@ -245,7 +249,7 @@ div.bo {
 }
 @media only screen and (max-width: 600px) {
 	div.bo {
-		margin-top: 70%;
+		margin-top: 300px;
 	}
 }
 @media screen and (min-width: 600px) and (max-width: 800px) {
