--- a/style.css
+++ b/style.css
@@ -482,3 +482,145 @@ div.bo {
 	top: 55%;
 	text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+.menu {
+  z-index: 20;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.menu.active ul li {
+  opacity: 1;
+  -webkit-transform: none;
+          transform: none;
+}
+.menu.active ul li:nth-child(5) {
+  transition: opacity 0.3s 0.5s ease, color 0.3s ease, -webkit-transform 0.3s 0.5s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.5s ease, transform 0.3s 0.5s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.5s ease, transform 0.3s 0.5s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.5s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+}
+.menu.active ul li:nth-child(4) {
+  transition: opacity 0.3s 0.6s ease, color 0.3s ease, -webkit-transform 0.3s 0.6s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.6s ease, transform 0.3s 0.6s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.6s ease, transform 0.3s 0.6s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.6s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+}
+.menu.active ul li:nth-child(3) {
+  transition: opacity 0.3s 0.7s ease, color 0.3s ease, -webkit-transform 0.3s 0.7s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.7s ease, transform 0.3s 0.7s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.7s ease, transform 0.3s 0.7s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.7s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+}
+.menu.active ul li:nth-child(2) {
+  transition: opacity 0.3s 0.8s ease, color 0.3s ease, -webkit-transform 0.3s 0.8s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.8s ease, transform 0.3s 0.8s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.8s ease, transform 0.3s 0.8s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.8s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+}
+.menu.active ul li:nth-child(1) {
+  transition: opacity 0.3s 0.9s ease, color 0.3s ease, -webkit-transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.9s ease, transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.9s ease, transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+}
+.menu.active .overlay {
+  -webkit-transform: scale(100, 150);
+          transform: scale(100, 100);
+}
+.menu.active .fab {
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2), 0 8px 24px rgba(0, 0, 0, 0.2);
+}
+.menu.active .fab:before {
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+}
+.menu.active .fab:after {
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translate(-50%, -50%) rotate(-45deg);
+}
+.menu.active .fa-facebook {
+  opacity: 1;
+  transition-delay: 0.3s;
+}
+.menu ul {
+  position: absolute;
+  right: 30px;
+  bottom: 86px;
+  text-align: right;
+}
+.menu ul li {
+  margin: 30px 0;
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 1.2px;
+  opacity: 0;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+.menu ul li:hover {
+  color: rgba(255, 255, 255, 0.8);
+}
+.menu ul li .fa {
+  width: 20px;
+  margin: 0 0 0 20px;
+  text-align: center;
+}
+.menu .overlay {
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background: rgba(72, 98, 163, 0.9);
+  transition: 0.3s ease;
+}
+.menu .fab {
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
+  background: tomato;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  transition: 0.3s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  cursor: pointer;
+}
+.menu .fab:before, .menu .fab:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: #fff;
+  width: 20px;
+  height: 2px;
+  border-radius: 4px;
+  -webkit-transform: translate(-50%, 5px);
+          transform: translate(-50%, 5px);
+  transition: 0.3s ease;
+}
+.menu .fab:after {
+  -webkit-transform: translate(-50%, -5px);
+          transform: translate(-50%, -5px);
+}
+.menu .fa-facebook {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  color: #FFF;
+  font-size: 24px;
+  opacity: 0;
+  transition: 0.3s ease;
+}
