--- a/style.css
+++ b/style.css
@@ -240,9 +240,7 @@ h1 span:nth-child(16) {
 /* Tooltip */
 .tooltip {
     position: absolute;
-    border-bottom: 1px dotted #ccc;
     z-index: 90;
-    color: #006080;
 }
 .tooltip .tooltiptext {
     visibility: hidden;
@@ -532,21 +530,21 @@ div.bo {
   transition: opacity 0.3s 0.9s ease, transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65);
 }
 .menu.active .overlay {
-  -webkit-transform: scale(100, 150);
+  -webkit-transform: scale(100, 100);
           transform: scale(100, 100);
 }
-.menu.active .fab {
+.menu.active .fab1 {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2), 0 8px 24px rgba(0, 0, 0, 0.2);
 }
-.menu.active .fab:before {
+.menu.active .fab1:before {
   -webkit-transform: translate(-50%, -50%) rotate(45deg);
           transform: translate(-50%, -50%) rotate(45deg);
 }
-.menu.active .fab:after {
+.menu.active .fab1:after {
   -webkit-transform: translate(-50%, -50%) rotate(-45deg);
           transform: translate(-50%, -50%) rotate(-45deg);
 }
-.menu.active .fa-facebook {
+.menu.active .fa-facebook-messenger {
   opacity: 1;
   transition-delay: 0.3s;
 }
@@ -555,23 +553,26 @@ div.bo {
   right: 30px;
   bottom: 86px;
   text-align: right;
+  list-style-type: none;
 }
-.menu ul li {
+.menu ul li{
   margin: 30px 0;
-  color: rgba(255, 255, 255, 0.4);
   font-size: 16px;
   font-weight: 300;
   letter-spacing: 1.2px;
   opacity: 0;
   -webkit-transform: translateY(10px);
           transform: translateY(10px);
-  transition: 0.3s ease;
   cursor: pointer;
 }
-.menu ul li:hover {
+.menu ul li, a {
+  color: rgba(255, 255, 255, 0.4);
+   transition: 0.3s ease;
+}
+.menu ul li:hover, a:hover {
   color: rgba(255, 255, 255, 0.8);
 }
-.menu ul li .fa {
+.menu ul li .fab1 {
   width: 20px;
   margin: 0 0 0 20px;
   text-align: center;
@@ -586,7 +587,7 @@ div.bo {
   background: rgba(72, 98, 163, 0.9);
   transition: 0.3s ease;
 }
-.menu .fab {
+.menu .fab1 {
   position: absolute;
   right: 15px;
   bottom: 15px;
@@ -598,7 +599,7 @@ div.bo {
   transition: 0.3s cubic-bezier(0.28, 0.55, 0.385, 1.65);
   cursor: pointer;
 }
-.menu .fab:before, .menu .fab:after {
+.menu .fab1:before, .menu .fab1:after {
   content: '';
   position: absolute;
   top: 50%;
@@ -611,16 +612,16 @@ div.bo {
           transform: translate(-50%, 5px);
   transition: 0.3s ease;
 }
-.menu .fab:after {
+.menu .fab1:after {
   -webkit-transform: translate(-50%, -5px);
           transform: translate(-50%, -5px);
 }
-.menu .fa-facebook {
+.menu .fa-facebook-messenger {
   position: absolute;
-  top: 30px;
-  left: 30px;
+  top: 10px;
+  left: 10px;
   color: #FFF;
-  font-size: 24px;
+  font-size: 32px;
   opacity: 0;
   transition: 0.3s ease;
 }
