--- a/style.css
+++ b/style.css
@@ -474,11 +474,13 @@ h1 span:nth-child(16) {
 div.bo {
 	position: fixed;
   width: 84%;
-	margin-left: 8%;
+	margin-left: 5%;
 	margin-right: 8%;
   padding: 10px 10px 10px 10px;
 	top: 55%;
 	text-align: center;
+  font-size: 20px;
+  border: 2px solid red;
 }
 
 
@@ -556,8 +558,8 @@ div.bo {
   list-style-type: none;
 }
 .menu ul li{
-  margin: 30px 0;
-  font-size: 16px;
+  margin: 15px 0;
+  font-size: 26px;
   font-weight: 300;
   letter-spacing: 1.2px;
   opacity: 0;
