--- a/style2.css
+++ b/style2.css
@@ -497,8 +497,19 @@ div.bo {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden; 
+  overflow: hidden;
+   border: 2px solid red;
+ 
 }
+.menu ul {
+  position: absolute;
+  right: 30px;
+  bottom: 86px;
+  text-align: right;
+  list-style-type: none;
+   border: 2px solid green;
+}
+
 /* Man mau xanh*/
 .menu .overlay {
   position: absolute;
@@ -564,103 +575,65 @@ div.bo {
 
 
 
-
-
-
-
-[data-tooltip]:before {
-  top: 50%;
-  margin-top: -11px;
-  font-weight: 600;
-  border-radius: 2px;
-  background: #555;
-  color: #fff;
-  content: attr(data-tooltip);
-  font-size: 18px;
-  text-decoration: none;
-  visibility: hidden;
+.menu ul li{
+   border: 2px solid hotpink;
+  margin: 15px 0;
+  font-size: 26px;
+  font-weight: 300;
+  letter-spacing: 1.2px;
   opacity: 0;
-  padding: 4px 7px;
-  margin-right: 12px;
-  position: absolute;
-  transform: scale(0);
-  right: 100%;
-  white-space: nowrap;
-  transform-origin: top right;
-  transition: all .3s cubic-bezier(.25, .8, .25, 1);
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  cursor: pointer;
+}
+.menu ul li:nth-child(1) {
+   border: 2px solid dodgerblue;
+   border-radius: 50%;
+   width: 40px;
+   height: 40px;
+   padding-top: 12px;
+   padding-right: 12px;
 }
 
-[data-tooltip]:hover:before {
-  visibility: visible;
-  opacity: 1;
-  transform: scale(1.5);
-  transform-origin: right center 0;
-  color: white;
-  }
-
-.fab1:hover + ul li a:before {
-  visibility: visible;
-  opacity: 1;
-  transform: scale(1);
-  transform-origin: right center 0;
-  transition-delay: 0.2s ease;
-}
-
-
-ul {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 85px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.3s ease;
-}
-
-
-li {
+.menu.active ul li {
   display: block;
-  text-align: right;
-  padding-right: 22px;
-  margin: 12px 0;
-}
-
-
-
-.menu.active ul {
   opacity: 1;
-  visibility: visible;
+  -webkit-transform: none;
+          transform: none;
 }
 
-.menu.active ul li a {
-  transform: scaleY(1) scaleX(1) translateY(-16px) translateX(0px);
+
+.menu ul li, a {
+  color: rgba(255, 255, 255, 0.4);
+   transition: 0.3s ease;
+}
+.menu ul li:hover, a:hover {
+  color: rgba(255, 255, 255, 1);
 }
 
-.menu ul li a {
-  border: 2px solid green;
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  text-decoration: none;
-  background-color: #ffffff;
-  border-radius: 50%;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-  transform: scaleY(0.5) scaleX(0.5) translateY(0px) translateX(0px);
-  -moz-transition: .3s;
-  -webkit-transition: .3s;
-  -o-transition: .3s;
-  transition: .3s;
-  font-size: 33px;
-  padding: 8px 10px 2px 0px;
+.menu.active ul li:nth-child(5) {
+  transition: opacity 0.3s 0.5s ease, color 0.3s ease, -webkit-transform 0.3s 0.5s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.5s ease, transform 0.3s 0.5s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.5s ease, transform 0.3s 0.5s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.5s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+}
+.menu.active ul li:nth-child(4) {
+  transition: opacity 0.3s 0.6s ease, color 0.3s ease, -webkit-transform 0.3s 0.6s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.6s ease, transform 0.3s 0.6s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.6s ease, transform 0.3s 0.6s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.6s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+}
+.menu.active ul li:nth-child(3) {
+  transition: opacity 0.3s 0.7s ease, color 0.3s ease, -webkit-transform 0.3s 0.7s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.7s ease, transform 0.3s 0.7s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.7s ease, transform 0.3s 0.7s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.7s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+}
+.menu.active ul li:nth-child(2) {
+  transition: opacity 0.3s 0.8s ease, color 0.3s ease, -webkit-transform 0.3s 0.8s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.8s ease, transform 0.3s 0.8s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.8s ease, transform 0.3s 0.8s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.8s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+}
+.menu.active ul li:nth-child(1) {
+  transition: opacity 0.3s 0.9s ease, color 0.3s ease, -webkit-transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65);
+  transition: opacity 0.3s 0.9s ease, transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease;
+  transition: opacity 0.3s 0.9s ease, transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65), color 0.3s ease, -webkit-transform 0.3s 0.9s cubic-bezier(0.28, 0.55, 0.385, 1.65);
 }
 
-.fa-facebook, .fa-facebook-messenger {
-  color: blue;
-}
-
-.fa-github {
-  color: black;
-}
